// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Default props and rendering verifies the snapshot for the component 1`] = `
<div
  className="ajc-flex-row ajc-flex-justify-center ajc-menu ajc-width-4k ajc-background-grey-2"
  id="test-menu-root"
  role="navigation"
>
  <div
    className="ajc-flex-row ajc-flex-justify-center ajc-width-full-hd"
  >
    <div
      className="ajc-flex-row ajc-flex-justify-center ajc-width-hd"
    >
      <div
        className="ajc-flex-row ajc-flex-justify-center ajc-width-hd-with-padding ajc-menu-content"
        id="test-menu"
      >
        <div
          className="ajc-flex-row ajc-justify-left"
          id="menu-item-0-root"
        >
          <div
            className="ajc-flex-row ajc-menu-item ajc-menu-item-grey"
            id="menu-item-0"
          >
            <a
              className="ajc-flex-row ajc-menu-item-content ajc-font-menu ajc-text-white"
              href="/test-item-1"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Menu Item 1
                
            </a>
          </div>
        </div>
        <div
          className="ajc-flex-row ajc-justify-left ajc-menu-item"
          id="dropdown-menu-1"
        >
          <div
            className="ajc-flex-row ajc-menu-item-content ajc-font-menu ajc-text-white ajc-menu-item-grey"
            data-expanded="false"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 1
              
            <div
              className="ajc-flex-row ajc-justify-left"
              role="presentation"
            >
              <div
                className="ajc-flex-row ajc-small-down-arrow-icon ajc-border-colour-white"
              />
            </div>
              
          </div>
          <div
            className="ajc-flex-column ajc-dropdown-menu ajc-background-grey-2 ajc-dropdown-menu-hidden ajc-visibility-hidden"
            id="dropdown-menu-1--content-parent"
          >
            <a
              className="ajc-flex-row ajc-dropdown-menu-item ajc-font-menu ajc-menu-item-grey"
              href="/test-dropdown-item-1-1"
              id="dropdown-menu-1--content-parent--dropdown-menu-item-0"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Dropdown Menu Item 1.1
                
              <div
                className="ajc-flex-row ajc-justify-left"
                role="presentation"
              >
                <div
                  className="ajc-flex-row ajc-small-right-arrow-icon ajc-border-colour-white"
                />
              </div>
                
            </a>
            <a
              className="ajc-flex-row ajc-dropdown-menu-item ajc-font-menu ajc-menu-item-grey"
              href="/test-dropdown-item-1-2"
              id="dropdown-menu-1--content-parent--dropdown-menu-item-1"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Dropdown Menu Item 1.2
                
              <div
                className="ajc-flex-row ajc-justify-left"
                role="presentation"
              >
                <div
                  className="ajc-flex-row ajc-small-right-arrow-icon ajc-border-colour-white"
                />
              </div>
                
            </a>
          </div>
        </div>
        <div
          className="ajc-flex-row ajc-justify-left"
          id="menu-item-2-root"
        >
          <div
            className="ajc-flex-row ajc-menu-item ajc-menu-item-grey"
            id="menu-item-2"
          >
            <a
              className="ajc-flex-row ajc-menu-item-content ajc-font-menu ajc-text-white"
              href="/test-item-2"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Menu Item 2
                
            </a>
          </div>
        </div>
        <div
          className="ajc-flex-row ajc-justify-left ajc-menu-item"
          id="dropdown-menu-3"
        >
          <div
            className="ajc-flex-row ajc-menu-item-content ajc-font-menu ajc-text-white ajc-menu-item-grey"
            data-expanded="false"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 2
              
            <div
              className="ajc-flex-row ajc-justify-left"
              role="presentation"
            >
              <div
                className="ajc-flex-row ajc-small-down-arrow-icon ajc-border-colour-white"
              />
            </div>
              
          </div>
          <div
            className="ajc-flex-column ajc-dropdown-menu ajc-background-grey-2 ajc-dropdown-menu-hidden ajc-visibility-hidden"
            id="dropdown-menu-3--content-parent"
          >
            <a
              className="ajc-flex-row ajc-dropdown-menu-item ajc-font-menu ajc-menu-item-grey"
              href="/test-dropdown-item-2-1"
              id="dropdown-menu-3--content-parent--dropdown-menu-item-0"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Dropdown Menu Item 2.1
                
              <div
                className="ajc-flex-row ajc-justify-left"
                role="presentation"
              >
                <div
                  className="ajc-flex-row ajc-small-right-arrow-icon ajc-border-colour-white"
                />
              </div>
                
            </a>
            <a
              className="ajc-flex-row ajc-dropdown-menu-item ajc-font-menu ajc-menu-item-grey"
              href="/test-dropdown-item-2-2"
              id="dropdown-menu-3--content-parent--dropdown-menu-item-1"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Dropdown Menu Item 2.2
                
              <div
                className="ajc-flex-row ajc-justify-left"
                role="presentation"
              >
                <div
                  className="ajc-flex-row ajc-small-right-arrow-icon ajc-border-colour-white"
                />
              </div>
                
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu Transferred props and rendering: Component with red background verifies the snapshot for the component 1`] = `
<div
  className="ajc-flex-row ajc-flex-justify-center ajc-menu ajc-width-4k ajc-background-red"
  id="test-menu-root"
  role="navigation"
>
  <div
    className="ajc-flex-row ajc-flex-justify-center ajc-width-full-hd"
  >
    <div
      className="ajc-flex-row ajc-flex-justify-center ajc-width-hd"
    >
      <div
        className="ajc-flex-row ajc-flex-justify-center ajc-width-hd-with-padding ajc-menu-content"
        id="test-menu"
      >
        <div
          className="ajc-flex-row ajc-justify-left"
          id="menu-item-0-root"
        >
          <div
            className="ajc-flex-row ajc-menu-item ajc-menu-item-red"
            id="menu-item-0"
          >
            <a
              className="ajc-flex-row ajc-menu-item-content ajc-font-menu ajc-text-white"
              href="/test-item-1"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Menu Item 1
                
            </a>
          </div>
        </div>
        <div
          className="ajc-flex-row ajc-justify-left ajc-menu-item"
          id="dropdown-menu-1"
        >
          <div
            className="ajc-flex-row ajc-menu-item-content ajc-font-menu ajc-text-white ajc-menu-item-red"
            data-expanded="false"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 1
              
            <div
              className="ajc-flex-row ajc-justify-left"
              role="presentation"
            >
              <div
                className="ajc-flex-row ajc-small-down-arrow-icon ajc-border-colour-white"
              />
            </div>
              
          </div>
          <div
            className="ajc-flex-column ajc-dropdown-menu ajc-background-red ajc-dropdown-menu-hidden ajc-visibility-hidden"
            id="dropdown-menu-1--content-parent"
          >
            <a
              className="ajc-flex-row ajc-dropdown-menu-item ajc-font-menu ajc-menu-item-red"
              href="/test-dropdown-item-1-1"
              id="dropdown-menu-1--content-parent--dropdown-menu-item-0"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Dropdown Menu Item 1.1
                
              <div
                className="ajc-flex-row ajc-justify-left"
                role="presentation"
              >
                <div
                  className="ajc-flex-row ajc-small-right-arrow-icon ajc-border-colour-white"
                />
              </div>
                
            </a>
            <a
              className="ajc-flex-row ajc-dropdown-menu-item ajc-font-menu ajc-menu-item-red"
              href="/test-dropdown-item-1-2"
              id="dropdown-menu-1--content-parent--dropdown-menu-item-1"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Dropdown Menu Item 1.2
                
              <div
                className="ajc-flex-row ajc-justify-left"
                role="presentation"
              >
                <div
                  className="ajc-flex-row ajc-small-right-arrow-icon ajc-border-colour-white"
                />
              </div>
                
            </a>
          </div>
        </div>
        <div
          className="ajc-flex-row ajc-justify-left"
          id="menu-item-2-root"
        >
          <div
            className="ajc-flex-row ajc-menu-item ajc-menu-item-red"
            id="menu-item-2"
          >
            <a
              className="ajc-flex-row ajc-menu-item-content ajc-font-menu ajc-text-white"
              href="/test-item-2"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Menu Item 2
                
            </a>
          </div>
        </div>
        <div
          className="ajc-flex-row ajc-justify-left ajc-menu-item"
          id="dropdown-menu-3"
        >
          <div
            className="ajc-flex-row ajc-menu-item-content ajc-font-menu ajc-text-white ajc-menu-item-red"
            data-expanded="false"
            onClick={[Function]}
            onKeyPress={[Function]}
            tabIndex={0}
          >
              
            Dropdown Menu Item 2
              
            <div
              className="ajc-flex-row ajc-justify-left"
              role="presentation"
            >
              <div
                className="ajc-flex-row ajc-small-down-arrow-icon ajc-border-colour-white"
              />
            </div>
              
          </div>
          <div
            className="ajc-flex-column ajc-dropdown-menu ajc-background-red ajc-dropdown-menu-hidden ajc-visibility-hidden"
            id="dropdown-menu-3--content-parent"
          >
            <a
              className="ajc-flex-row ajc-dropdown-menu-item ajc-font-menu ajc-menu-item-red"
              href="/test-dropdown-item-2-1"
              id="dropdown-menu-3--content-parent--dropdown-menu-item-0"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Dropdown Menu Item 2.1
                
              <div
                className="ajc-flex-row ajc-justify-left"
                role="presentation"
              >
                <div
                  className="ajc-flex-row ajc-small-right-arrow-icon ajc-border-colour-white"
                />
              </div>
                
            </a>
            <a
              className="ajc-flex-row ajc-dropdown-menu-item ajc-font-menu ajc-menu-item-red"
              href="/test-dropdown-item-2-2"
              id="dropdown-menu-3--content-parent--dropdown-menu-item-1"
              onClick={[Function]}
              tabIndex={0}
            >
                
              Dropdown Menu Item 2.2
                
              <div
                className="ajc-flex-row ajc-justify-left"
                role="presentation"
              >
                <div
                  className="ajc-flex-row ajc-small-right-arrow-icon ajc-border-colour-white"
                />
              </div>
                
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
